# crystal-editor

./: LICENSE  README.md  package-lock.json  package.json
public/: css-reset.css  global.css  index.html
src/: App.svelte  Debug.svelte  Editor.svelte  Launcher.svelte  Settings.svelte  data.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  settings.rs
src/components/: Titlebar.svelte
src/pages/: Console.svelte  Debug.svelte  Editor.svelte  Launcher.svelte  Settings.svelte
src/ui/: Drawer.svelte  Icon.svelte  dropdown.svelte
