[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch="next", features = ["api-all", "notification-all", "system-tray"] }
crystal-hook = {git = "https://github.com/AlveLarsson/crystal-hook"}

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

# Bloat cut
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
